CAS login page: fixed too wide fields + JS error

--- a/cas-server-webapp/css/cas.css
+++ b/cas-server-webapp/css/cas.css
@@ -49,3 +49,7 @@ input.btn-submit {
   margin-right: 10px;
   width: 100%;
 }
+
+div.box input {
+  width: 200px;
+}
